<resources>
    <string name="app_name">Bands4Hire</string>

    <string name="add_band">Add Band Advert</string>
    <string name="band_name">Band Name:</string>
    <string name="location">Location:</string>
    <string name="price">Price Per Appearance: €</string>
    <string name="email">Email:</string>
    <string name="tel_number">Phone No:</string>
    <string name="available_dates">Date:</string>
    <string name="genre">Genre:</string>
    <string name="created_by">Posted by</string>

    <string name="enter_band_name">Enter Name</string>
    <string name="enter_genre">Enter Genre</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_telephone">Enter Phone</string>
    <string name="enter_date">Enter Date (dd/mm/yyyy)</string>

    <string-array name="prices">
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>175</item>
        <item>200</item>
        <item>225</item>
        <item>250</item>
    </string-array>

    <string-array name="genre">
        <item>Rock</item>
        <item>Classic</item>
        <item>Heavy Metal</item>
        <item>Jazz</item>
        <item>Dance</item>
        <item>Rap</item>
        <item>Hip Hop</item>
        <item>Metal</item>
        <item>Electric</item>
    </string-array>

    <string name="save_advert">Save Advert   </string>
    <string name="delete_advert">Delete Advert</string>


    <!--Strings for nav drawer-->
    <string name="nav_header_title">Bands4Hire</string>
    <string name="nav_header_desc">App Description</string>
    <string name="nav_header_subtitle">Bringing Pubs and Bands Together</string>
    <string name="nav_all_adverts">All Adverts</string>
    <string name="nav_add_advert">Add Advert</string>
    <string name="nav_my_adverts">My Adverts</string>
    <string name="nav_about">About Bands4Hire</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="first_run">Select User Type</string>
    <string name="user_type_description">
        As this is your first time using the app, you must select the type of user you are before continuing.\n\nBands can create, edit and remove adverts, and create
        a profile for their band. Bookers can view all adverts and leave reviews on band profiles.
    </string>
    <string name="single_advert_header">Band Advert</string>
    <string name="my_adverts_header">My Adverts</string>
    <string name="nav_add_band">Add Band</string>
    <string name="nav_my_bands">My Bands</string>
    <string name="band_profile_header">Band Profile</string>

    <string name="edit_advert_header">Edit Advert</string>

    <string name="leave_review">Leave a review?</string>
    <string name="close_review">Close review panel</string>
    <string name="enter_review">Enter review here&#8230;</string>
    <string name="submit_review">Submit</string>
    <string name="clear_review">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Pubs 4 Hire is dedicated to helping Bands find gigs in their local area.</string>
</resources>
