<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/booker_nav_group"
        android:visible="true">
        <item
            android:id="@+id/nav_all_adverts_booker"S
            android:title="@string/nav_all_adverts" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/band_nav_group"
        android:visible="false">
        <item
            android:id="@+id/nav_all_adverts_band"
            android:title="@string/nav_all_adverts" />
        <item
            android:id="@+id/nav_add_advert"
            android:title="@string/nav_add_advert" />
        <item
            android:id="@+id/nav_my_adverts"
            android:title="@string/nav_my_adverts" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>