<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Fragments.EditAdvert">

    <TextView
        android:id="@+id/editAdvertHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/edit_advert_header"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editAdvertHeader">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/datesAvailableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/datesAvailableLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/available_dates" />

                <EditText
                    android:id="@+id/editDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_date"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:id="@+id/bandNameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/bandNameLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/band_name" />

                <EditText
                    android:id="@+id/editBandNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_band_name"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/genreRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bandNameRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/genreLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />
                <Spinner
                    android:id="@+id/genreSpinnerEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/priceSpinner"
                    android:entries="@array/genre" />


            </TableRow>

            <TableRow
                android:id="@+id/emailRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telNumberRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:id="@+id/telNumberRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datesAvailableRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/telNumberLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_number" />

                <EditText
                    android:id="@+id/editTelNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_telephone"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:id="@+id/priceRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/priceLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <Spinner
                    android:id="@+id/editPriceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/prices" />
            </TableRow>

            <TableRow
                android:id="@+id/locationRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genreRow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <EditText
                    android:id="@+id/editLocationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_location"
                    android:inputType="textPersonName" />
            </TableRow>

            <Button
                android:id="@+id/editBandButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailRow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:background="@color/colorPrimary"
                android:minWidth="105dip"
                android:text="@string/save_advert" />

            <Button
                android:id="@+id/deleteBandAdvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editBandButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/delete_advert" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>